Add CTest tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10.0)
+cmake_minimum_required(VERSION 3.19.0)
 project(stella-interpreter VERSION 0.1.0)
 
 set (Stella_Syntax
@@ -29,3 +29,14 @@ set_property(TARGET stella-interpreter PROPERTY CXX_STANDARD 17)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
+
+include(CTest)
+
+add_test(NAME bad-squares-1 COMMAND stella-interpreter typecheck ../tests/ill-typed/bad-squares-1.stella)
+add_test(NAME bad-squares-2 COMMAND stella-interpreter typecheck ../tests/ill-typed/bad-squares-2.stella)
+set_tests_properties(bad-squares-1 bad-squares-2 PROPERTIES WILL_FAIL TRUE)
+
+add_test(NAME factorial COMMAND stella-interpreter typecheck ../tests/well-typed/factorial.stella)
+add_test(NAME increment_twice COMMAND stella-interpreter typecheck ../tests/well-typed/increment_twice.stella)
+add_test(NAME logical-operators COMMAND stella-interpreter typecheck ../tests/well-typed/logical-operators.stella)
+add_test(NAME squares COMMAND stella-interpreter typecheck ../tests/well-typed/squares.stella)
